--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,6 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "charconv": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "/data_new/home/hzx/test/project/job/Deploy/CMakeExample"
 }
